# filesqueeze

./: .cursorrules  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  FILE-LAYOUT.md  INSTALL.md  INSTALLATION-SUMMARY.md  INSTALLATION.md  INSTALLATION_PRINCIPLES.md  LICENSE  MANIFEST.in  README.md  __init__.py  coverage.json  install-dev.ps1  install.ps1  install.ps1.bak  install.sh  main.py  main.py.old  pyproject.toml  setup.py  start-service.ps1  stop-service.ps1  uninstall.ps1  video.py
.claude/skills/: run-integration-tests.yml
.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh
.githooks/: install.ps1  install.sh  post-edit  post-edit.ps1  pre-commit  pre-commit.ps1  pre-push  pre-push.ps1
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CI.md  DEVELOPMENT.md  LOGGING.md  PATH_HANDLING.md  TESTING.md  TROUBLESHOOTING.md
examples/: logging_examples.py
filesqueeze/: __init__.py  __main__.py  autostart.py  binaries.py  cli.py  config.py  constants.py  default.toml  doctor.py  document.py  enums.py  file_type_registry.py  gui.py  handlers.py  logger.py  main.py  ocr.py  output.py  pptx.py  scanner.py  service.py  state.py  tray.py  video.py
filesqueeze/fsm/: __init__.py  default.py  enums.py
filesqueeze/ops/: __init__.py  document.py  image.py  presentation.py  video.py
filesqueeze/system/: __init__.py  binaries.py  config_adapters.py  decorators.py  logger.py  platform.py
filesqueeze/utils/: __init__.py  subprocess_helper.py
tests/: README.md  conftest.py  test_config.py  test_document.py  test_gui.py  test_integration.py  test_logger.py  test_output.py  test_retention.py  test_scanner.py  test_service.py  test_video.py
tests/integration/: MANUAL_TESTS.md  README.md  __init__.py  test_gui_behavior.py  test_handlers.py  test_installers.py  test_integration.py  test_invariants.py  test_service.py  test_single_instance.py
tests/regression/: README.md  __init__.py  test_behavioral_baseline.py  test_subprocess_refactoring.py
tests/smoke/: README.md  __init__.py  test_api_integrity.py  test_core_instantiation.py  test_critical_imports.py  test_data_structure_integrity.py
tests/system/: __init__.py  test_circular_imports.py  test_config.py  test_config_adapters.py  test_logger.py
tests/unit/: __init__.py  test_cleanup_manual.py  test_document.py  test_output.py  test_retention.py  test_scanner.py  test_video.py
