[project]
name = "filesqueeze"
version = "0.1.0"
description = "Utility package for compressing various file types"
authors = [
    {name = "JS Ng",email = "ngjunsiang@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tomli>=2.0.0; python_version < '3.11'",
    "tomli-w>=1.0.0",
    "watchdog (>=6.0.0,<7.0.0)",
    "pystray (>=0.19.5,<0.20.0)",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]
ocr = [
    "pdfminer.six>=20231228",
]
notifications = [
    "win10toast>=0.9",
]

[project.scripts]
filesqueeze = "filesqueeze.cli:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"
tomli = {version = "^2.0.0", python = "<3.11"}
tomli-w = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
pdfminer-six = "^20231228"
tomli-w = "^1.2.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[tool.poetry.scripts]
# Project task scripts - use with: poetry run <task>
# These enforce the policy of using install/uninstall scripts
install = "powershell -ExecutionPolicy Bypass -File ./install.ps1"
uninstall = "powershell -ExecutionPolicy Bypass -File ./uninstall.ps1"
reinstall = "powershell -ExecutionPolicy Bypass -File ./install.ps1 -Force"
build = "poetry build"
test = "pytest"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 127
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.git
  | \.venv
  | venv
  | build
  | dist
  | __pycache__
)/
'''