[project]
name = "filesqueeze"
version = "0.1.0"
description = "Utility package for compressing various file types"
authors = [
    {name = "JS Ng",email = "ngjunsiang@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tomli>=2.0.0; python_version < '3.11'",
    "tomli-w>=1.0.0",
    "watchdog (>=6.0.0,<7.0.0)",
    "pystray (>=0.19.5,<0.20.0)",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black==26.3.1",
    "ruff>=0.0.0",
]
ocr = [
    "pdfminer.six>=20231228",
]
notifications = [
    "win10toast>=0.9",
]

[project.scripts]
filesqueeze = "filesqueeze.cli:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"
tomli = {version = "^2.0.0", python = "<3.11"}
tomli-w = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
pdfminer-six = "^20231228"
tomli-w = "^1.2.0"
black = "26.3.1"
ruff = ">=0.0.0"

[tool.poetry.scripts]
# Project task scripts - use with: poetry run <task>
# These enforce the policy of using install/uninstall scripts
install = "powershell -ExecutionPolicy Bypass -File ./install.ps1"
uninstall = "powershell -ExecutionPolicy Bypass -File ./uninstall.ps1"
reinstall = "powershell -ExecutionPolicy Bypass -File ./install.ps1 -Force"
build = "poetry build"
test = "pytest"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 127
target-version = "py311"
# Focus on major issues that impact code quality and correctness
select = [
    "E",   # pycodestyle errors (syntax errors)
    "F",   # pyflakes (undefined names, unused imports)
    "W",   # pycodestyle warnings (dangerous patterns)
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear (common bugs)
    "C4",  # flake8-comprehensions (unnecessary comprehensions)
    "UP",  # pyupgrade (modernize Python syntax)
]
ignore = [
    "E501",  # line too long (handled by Black)
]
exclude = [
    ".git",
    ".venv",
    "venv",
    "build",
    "dist",
    "__pycache__",
]

# Per-file ignores for specific situations
[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["S101"]  # Allow assert in tests

[tool.black]
line-length = 127
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.git
  | \.venv
  | venv
  | build
  | dist
  | __pycache__
)/
'''
# Explicit formatting rules to prevent version differences
skip-string-normalization = false
preview = false