[project]
name = "filesqueeze"
version = "0.1.0"
description = "Utility package for compressing various file types"
authors = [
    {name = "JS Ng",email = "ngjunsiang@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tomli>=2.0.0; python_version < '3.11'",
    "tomli-w>=1.0.0",
    "watchdog (>=6.0.0,<7.0.0)",
    "pystray (>=0.19.5,<0.20.0)",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.0.0",
]
ocr = [
    "pdfminer.six>=20231228",
]
notifications = [
    "win10toast>=0.9",
]

[project.scripts]
filesqueeze = "filesqueeze.cli:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"
tomli = {version = "^2.0.0", python = "<3.11"}
tomli-w = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pdfminer-six = "^20231228"
tomli-w = "^1.2.0"

[tool.poetry.group.ci.dependencies]
pytest-cov = "^4.0.0"
ruff = ">=0.0.0"

[tool.poetry.scripts]
# Project task scripts - use with: poetry run <task>
# These enforce the policy of using install/uninstall scripts
install = "powershell -ExecutionPolicy Bypass -File ./install.ps1"
uninstall = "powershell -ExecutionPolicy Bypass -File ./uninstall.ps1"
reinstall = "powershell -ExecutionPolicy Bypass -File ./install.ps1 -Force"
build = "poetry build"
test = "pytest"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 127
target-version = "py311"

[tool.ruff.lint]
# Focus on major issues that impact code quality and correctness
select = [
    "E",   # pycodestyle errors (syntax errors)
    "F",   # pyflakes (undefined names, unused imports)
    "W",   # pycodestyle warnings (dangerous patterns)
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear (common bugs)
    "C4",  # flake8-comprehensions (unnecessary comprehensions)
    "UP",  # pyupgrade (modernize Python syntax)
    "ANN", # flake8-annotations (type annotations)
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "UP035", # Import from collections.abc (too noisy for now)
    "ANN204", # __init__ methods (well-known to return None, obvious from class)
    "ANN202", # Private methods (internal implementation, not public API)
    "ANN206", # Private classmethods (internal implementation, not public API)
    "ANN002", # *args (often pass-through, context-dependent)
    "ANN003", # **kwargs (often pass-through, context-dependent)
    "ANN401", # typing.Any (necessary for dynamic code and interfaces)
]
exclude = [
    ".git",
    ".venv",
    "venv",
    "build",
    "dist",
    "__pycache__",
]

# Per-file ignores for specific situations
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN"]  # Allow assert in tests, skip type annotations in tests

# Ruff formatting configuration (replaces Black)
[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false